update functional
