# pkg/models/movies.go
@@ -7,7 +7,7 @@ type Movie struct {
 	Type        string       `json:"type" binding:"required,oneof=film serial" db:"type"`
 	Year        int          `json:"year" binding:"required" db:"year"`
 	Description string       `json:"description" db:"description"`
-	Status      string       `json:"status" binding:"required,oneof=watched planned" db:"status"`
+	Status      *string      `json:"status" binding:"required,oneof=watched planned" db:"status"`
 	Mark        *int         `json:"mark" binding:"min=1,max=10" db:"mark"`
 	Review      *string      `json:"review" db:"review"`
 	Actors      []MovieActor `json:"actors"`
@@ -18,6 +18,31 @@ type MovieActor struct {
 	Id        int    `json:"id" db:"id"`
 	FirstName string `json:"first_name" binding:"required" db:"first_name"`
 	LastName  string `json:"last_name" binding:"required" db:"last_name"`
-	Role      string `json:"role" binding:"required" db:"role"`
+	Role      string `json:"role" binding:"required,oneof=actor director" db:"role"`
 	BioUrl    string `json:"bio_url" db:"bio_url"`
 }
+
+// {
+//   "actors": [
+//     {
+//       "bio_url": "http",
+//       "first_name": "Леонардо",
+//       "last_name": "Ди Каприо",
+//       "role": "actor"
+//     },
+//     {
+//       "bio_url": "http",
+//       "first_name": "Бред",
+//       "last_name": "Питт",
+//       "role": "actor"
+//     }
+
+//   ],
+//   "description": "топчик",
+//   "mark": 8,
+//   "review": "мне понравилось",
+//   "status": "watched",
+//   "title": "Однажды в Голивуде",
+//   "type": "film",
+//   "year": 2019
+// }
